syntax = "proto3";
package verity.persistence.boltdb.v1;

option go_package = "github.com/dogmatiq/verity/persistence/boltpersistence/internal/pb";

// AggregateMetaData is a protocol buffers representation of
// persistence.AggregateMetaData.
message AggregateMetaData {
  uint64 revision = 1;
  string last_event_id = 2;
}
