syntax = "proto3";
package verity.persistence.boltdb.v1;

option go_package = "github.com/dogmatiq/verity/persistence/boltpersistence/internal/pb";

// ProcessInstance is a protocol buffers representation of
// persistence.ProcessInstance.
message ProcessInstance{
  uint64 revision = 1;
  string media_type = 2;
  bytes data = 3;
  bool has_ended = 4;
}
